Pesky overflow bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -88,7 +88,9 @@ a {
   margin-left: auto;
   padding-right: 24px;
   padding-left: 24px;
+  width: 100%;
   max-width: 1200px;
+  overflow: hidden;
 }
 
 .hero {
